# pereval-online

./: .gitignore  Cargo.toml  README.md  requirements.txt
migrations/: 000_drop_all.sql  001_initial_schema.sql  002_import_data.sql  init.sql  seed.sql
scripts/: import_data.py  parse_regions.py
src/: config.rs  main.rs
src/config/: mod.rs
src/db/: mod.rs  repository.rs
src/error/: mod.rs
src/handlers/: mod.rs  object.rs  stats.rs
src/models/: mod.rs  object.rs  photo.rs  region.rs  search.rs  stats.rs  trip.rs
static/: fonts_list.txt  index.html
static/css/: build-noncritical.css  build.css  region-content.css
static/js/: build-noncritical.js  build.js
templates/: about.html  aside.html  base.html  contacts.html  index.html  object.html  region.html  regions.html  search.html  trip.html
